--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "smite"
 version = "0.1.0"
 edition = "2021"
+description = "Library for interacting with the Smite API"
+authors = ["Mateusz Burdyna"]
+license = "MIT"
+rust-version = "1.79.0"
+repository = "https://github.com/mateusz2173/smite-rs"
+homepage = "https://github.com/mateusz2173/smite-rs"
+keywords = ["smite", "api", "wrapper", "hirez", "game"]
+categories = ["api-bindings"]
 
 [dependencies]
 chrono = { version = "0.4.38", features = ["serde"] }
